...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oiw-9D-3wC">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                        <subviews>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xwD-ey-RUM">
                                                <rect key="frame" x="0.0" y="226" width="414" height="165"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="hduhd@hsudh.com" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5bN-Mp-2oe">
                                                        <rect key="frame" x="16" y="8" width="382" height="44"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" hint="email" identifier="email"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="44" id="IAx-qJ-oOH"/>
                                                        </constraints>
...
                                                        <rect key="frame" x="16" y="105" width="382" height="44"/>
                                                        <color key="backgroundColor" red="0.50588235290000005" green="0.69803921570000005" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="44" id="zOl-GA-DE0"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                        <state key="normal" title="Log in">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="loginButtonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dQg-of-tyJ"/>
                                                            <segue destination="kgp-Rx-l5X" kind="show" id="Cb5-dy-6N5"/>
                                                        </connections>
...
                                                        <rect key="frame" x="0.0" y="52" width="414" height="1"/>
                                                        <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="1" id="9dz-ny-z23"/>
                                                        </constraints>
                                                    </view>
                                                    <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="dfdfdsfdsfds" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UKC-cU-9sO">
                                                        <rect key="frame" x="16" y="53" width="382" height="44"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                        <accessibility key="accessibilityConfiguration" hint="password" identifier="password"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="44" id="4nB-nx-vzk"/>
                                                        </constraints>
...
