...
//        
//        if((emailTextField.text?.characters.count)! > 0){
//           
//            if(!TextfieldValidator.validatePassword(emailTextField.text!)){
//                
//                emailTextField.becomeFirstResponder()
//                self.showOkAlertMessage(withTitle: "Invalid email", andBody: "Please, type a valid email.")
//                
//                return false
//            }
//        }
//        
//        return true
...
